# Serializer

./: CMakeLists.txt  main.cpp
include/Serializer/: CONSTANTS.h  Property.h  Serializer.h  deserialize.h  serialize.h  static_iteration.h
include/Serializer/Types/: Array.h  BaseType.h  Boolean.h  Null.h  Numeric.h  Object.h  String.h
src/Serializer/Types/: Array.cpp  BaseType.cpp  Boolean.cpp  Null.cpp  Numeric.cpp  Object.cpp  String.cpp
